=== Post-1.2 ===
- import/export: support for <metadata>
- export: file format like AbiWord 1.1.2
- export: fix bug when font name has an &
- export: table (just the structure, no colspan, no rowspan)

=== KWord 1.4 Alpha ===
- export: fix linespacing