@@ -41,7 +41,7 @@
 
     <tr BGCOLOR="#EEEEFF">
      <td VALIGN=TOP WIDTH="1%" NOWRAP><b><font size="+1">Last update</font></b></td>
-     <td>28 Jan 2003</td>
+     <td>12 Jun 2005</td>
     </tr>
 
     <tr BGCOLOR="#CCCCFF">
@@ -83,6 +83,7 @@
         19 Mar 2002: More styles, inlcuding character ones.<br>
         07 Jun 2002: Ignored Word List<br>
 	28 Jan 2003: new XML parsing error message box<br>
+	12 Jun 2005: import keyword/subject in documentinfo<br>
      </td>
     </tr>
 
